<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:fontFamily="serif"
        android:text="@string/judul"
        android:textColor="@color/black"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_download"
        app:layout_constraintEnd_toStartOf="@+id/btn_home_download"
        app:layout_constraintStart_toEndOf="@+id/btn_home_scan" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <Button
        android:id="@+id/btn_home_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:textColor="@color/white"
        android:background="@drawable/button"
        />

    <Button
        android:id="@+id/btn_home_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_download"
        app:layout_constraintBottom_toBottomOf="@+id/btn_home_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_home_scan"
        app:layout_constraintTop_toTopOf="@+id/btn_home_scan"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/btn_home_howto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_Howto"
        app:layout_constraintEnd_toEndOf="@+id/btn_home_scan"
        app:layout_constraintStart_toStartOf="@+id/btn_home_scan"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_scan"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/btn_home_boutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_aboutme"
        app:layout_constraintEnd_toEndOf="@+id/btn_home_download"
        app:layout_constraintStart_toStartOf="@+id/btn_home_download"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_download"
        android:background="@drawable/button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watermark"
        android:textSize="11dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="serif-monospace"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/watermark2"
        android:textSize="11dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>